# sport-league-bot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: PROGRESS.md  coordinator-guide.html  known-issues.md
infra/: app.py  cdk.json
infra/stacks/: bot_stack.py
scripts/: build_lambda.py  delete_month.py  deploy.sh  go_local.sh  go_prod.sh  set_webhook.py  wipe_group.py  wipe_table.py
src/bot/: app.py  config.py  db.py  local.py
src/bot/handlers/: admin.py  player.py  setup.py  signup.py  skips.py
src/bot/services/: attendance.py  cards.py  months.py  permissions.py  users.py
tests/: conftest.py  test_admin.py  test_attendance.py  test_db.py  test_months.py  test_player.py  test_scope.py  test_setup.py  test_skips.py  test_users.py
