[project]
name = "sport-league-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.39",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22",
]

[dependency-groups]
dev = [
    "moto>=5.2.2",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
infra = [
    "aws-cdk-lib>=2.261.0",
    "constructs>=10.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
